# tg_uptime_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  db_manager.py  docker-compose.yaml  pyproject.toml  uptime_kuma_client.py
data/: bot_database.db
tests/: README.md  test_bot.py  test_uptime_kuma_client.py
